lusushprgdir=../
lusushprg_PROGRAMS=lusush
lusush_SOURCES=\
	       alias.c \
	       builtins.c \
	       cmdlist.c \
	       env.c \
	       exec.c \
	       expand.c \
	       history.c \
	       init.c \
	       input.c \
	       misc.c \
	       opts.c \
	       parse.c \
	       prompt.c \
	       lusush.c

